@@ -59,17 +59,12 @@ public class PHScaleConstants {
     //----------------------------------------------------------------------------
     
     // Color of the "play area"
-    public static final Color CANVAS_BACKGROUND = Color.WHITE;
-    
-    // Color of labels placed directly on the play area
-    public static final Color CANVAS_LABELS_COLOR = Color.BLACK;
+    public static final Color CANVAS_BACKGROUND = new Color( 230, 230, 230 );
     
     // Generic transparent color
     public static final Color COLOR_TRANSPARENT = new Color( 0f, 0f, 0f, 0f );
     
-    // Default color for module tabs
-    public static final Color SELECTED_TAB_COLOR = Color.ORANGE;
-    
+    //XXX delete these?
     public static final Color H2O_COLOR = new Color( 102, 242, 241 );
     public static final Color H3O_COLOR = new Color( 242, 102, 101 );
     public static final Color OH_COLOR = new Color( 102, 132, 242 );
